@@ -1,4 +1,5 @@
 5.1.7 -> 5.1.8:
+    - jbj: install/use deb:{md5sums,preinst,postinst,prerm,postrm} queryformats.
     - jbj: install/use yum:{primary,filelists,other}.sqlite queryformats.
     - jbj: install/use yum:{primary,filelists,other}.xml queryformats.
     - jbj: install/use wnh:{primary,filelists,other}.yaml queryformats.
